--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,48 +24,16 @@ jobs:
       matrix:
         firmware:
           - {
-              "name": "lighting-app-esp32-c3",
-              "dir": "lighting-app-example/esp32-c3/",
+              "name": "lighting-app-esp32-s3",
+              "dir": "lighting-app-example/esp32-s3/",
               "root": "examples/lighting-app/esp32/",
               "appbin": "chip-lighting-app.bin",
-              "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
-            }
-          - {
-              "name": "lighting-app-esp32-atom-lite",
-              "dir": "lighting-app-example/esp32-atom-lite/",
-              "root": "examples/lighting-app/esp32/",
-              "appbin": "chip-lighting-app.bin",
-              "idf_target": "esp32",
-              "chip_ref": "v1.1.0.1"
-            }
-          - {
-              "name": "lighting-app-esp32-c3-m5stamp",
-              "dir": "lighting-app-example/esp32-c3-m5stamp/",
-              "root": "examples/lighting-app/esp32/",
-              "appbin": "chip-lighting-app.bin",
-              "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
-            }
-          - {
-              "name": "light-switch-app-esp32-c3",
-              "dir": "light-switch-app-example/esp32-c3/",
-              "root": "examples/light-switch-app/esp32/",
-              "appbin": "chip-light-switch-app.bin",
-              "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
-            }
-          - {
-              "name": "all-clusters-app-esp32-m5-basic-core",
-              "dir": "all-clusters-app-example/esp32-m5-basic-core/",
-              "root": "examples/all-clusters-app/esp32/",
-              "appbin": "chip-all-clusters-app.bin",
-              "idf_target": "esp32",
+              "idf_target": "esp32s3",
               "chip_ref": "v1.1.0.1"
             }
 
     container:
-      image: connectedhomeip/chip-build-esp32:0.6.18
+      image: connectedhomeip/chip-build-esp32:0.7.25
 
     outputs:
       git-hash: ${{ steps.git-version.outputs.hash }}
